<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/rule1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/rule_1" />

            <TextView
                android:id="@+id/rule2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/rule_2" />

            <TextView
                android:id="@+id/rule3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/rule_3" />

            <TextView
                android:id="@+id/rule4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/rule_4" />

            <TextView
                android:id="@+id/rule5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/rule_5" />

            <TextView
                android:id="@+id/rule6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/rule_6" />

            <TextView
                android:id="@+id/rule7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/rule_7" />

            <TextView
                android:id="@+id/rulesWorkingSchema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rule_working_schema" />

        </LinearLayout>

    </ScrollView>

</layout>